# dataset-tools

./: .gitignore  README.md
scripts/vcpkg-manifest/: vcpkg.json
scripts/vcpkg/ports/qbreakpad/: portfile.cmake
src/: CMakeLists.txt
src/apps/AudioSlicer/: CMakeLists.txt
src/apps/HubertFA/: CMakeLists.txt
src/apps/HubertFA/util/: HfaModel.cpp  HfaThread.h
src/apps/LyricFA/: CMakeLists.txt
src/apps/LyricFA/util/: LyricAligner.cpp
src/apps/MinLabel/: CMakeLists.txt  main.cpp
src/apps/SlurCutter/: CMakeLists.txt  main.cpp
src/apps/SomeInfer/: CMakeLists.txt
src/libs/FunAsr/src/: CMakeLists.txt  util.h
src/libs/qsmedia/: CMakeLists.txt
